--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,14 +86,10 @@ dependencies:
   logger: ^2.0.2
   logging: ^1.3.0
   lrc: ^1.0.2
-  media_kit:
-    git:
-      url: https://github.com/media-kit/media-kit
-      path: media_kit
-  media_kit_libs_audio:
-    git:
-      url: https://github.com/media-kit/media-kit
-      path: libs/universal/media_kit_libs_audio
+  media_kit: ^1.2.1 # Primary package.
+  media_kit_video: ^1.3.1 # For video rendering.
+  media_kit_libs_audio: ^1.0.7 # Native audio dependencies.
+  media_kit_libs_video: ^1.0.7 # Native video dependencies.
   metadata_god: ^1.1.0
   mime: ^2.0.0
   open_file: ^3.5.10
